Sidebar: Hide scrollbar (Firefox fix)

--- a/scss/components/vue/SidebarCustomizer.scss
+++ b/scss/components/vue/SidebarCustomizer.scss
@@ -48,6 +48,7 @@ $customizer-side-padding: 24px;
     max-height: 100%;
     box-sizing: border-box;
     border-top-right-radius: 12px;
+    overflow-x: hidden; /* hide scrollbar in firefox */
   }
 
   .close-wrapper {
